# file-manager-lite

./: CMakeLists.txt  README.md
resources/: icons.qrc  lotus.desktop
resources/qss/: dark.qss  light.qss
scripts/: install.sh  uninstall.sh
src/: filemodel.cpp  filemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  sidebar.cpp  sidebar.h
